brand: rename project to MEG 315 Group 9 for group repo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AD-HTC Fuel-Enhanced Power Gas Cycle Analyser</title>
+    <title>AD-HTC Fuel-Enhanced Power Gas Cycle — MEG 315 Group 9</title>
     <meta name="description"
         content="Interactive AD-HTC Fuel-Enhanced Power Gas Cycle design and thermodynamic analysis with H-S and T-Ḣ diagrams. Energhx Research Group, University of Lagos.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
     <header class="app-header">
         <div class="header-glow"></div>
         <div class="header-content">
-            <div class="header-badge">MEG 315 — Energhx Research Group</div>
+            <div class="header-badge">MEG 315 — Group 9 | Energhx Research Group</div>
             <h1>AD-HTC <span class="accent">Fuel-Enhanced</span> Power Gas Cycle</h1>
             <p class="subtitle">Anaerobic Digestion + Hydrothermal Carbonization — Interactive Design &amp;
                 Thermodynamic Analysis</p>
